# MatrixMultiplication

./: .gitignore  CMakeLists.txt  HowTo.md  LICENSE  README.md  TODO.txt  asan_env.sh  autotune-constants.py  bm_zen5_mm.sh  clang-format  cmake-build.sh  compile_commands.json  conanfile.py  conanfile.txt  perf-notes.txt  perf_record.sh  run_benchmark.sh  run_unit_tests.sh  vtune-record.sh
code/: MulMatrixApp.cpp
code/benchmarks/: benchmark_utils.cpp  benchmark_utils.hpp  matMulZen5Benchmark.cpp  matmulHyperBenchmark.cpp
code/benchmarks/reorder/: reorderBenchmark.cpp
code/mm/core/: Matrix.cpp  Shape.hpp  kernels.hpp  layout.hpp  reorderMatrix.hpp  zen5kernels.hpp
code/mm/core/utils/: cpu.hpp  utils.hpp
code/mm/genai/: matMulClaude.cpp  matMulGpt.cpp
code/mm/matmul/: matMulAutotune.hpp  matMulHyper.hpp  matMulLoops.cpp  matMulPadding.cpp  matMulRegOpt.hpp  matMulSimd.cpp  matMulSimd.hpp  matMulZen5.hpp  matmulCacheAware.hpp  zen5_constants.hpp
code/mm/tpi/: matMulBlis.cpp  matMulBlis.hpp  matMulOpenBlas.cpp  matMulOpenBlas.hpp  matmulGPT5.cpp
code/tests/: TestAutotune.cpp  TestMatMulBFP16.cpp  TestMatMulHyper.cpp  TestMatmulZen5.cpp  TestZorder.cpp
conan/profiles/: gcc16
docs/: HowTo.md
matrixMultiplication/: Benchmarks.cpp  MulMatrixApp.cpp  UTMatMul.cpp  UTRepacking.cpp  UnitTests.cpp
matrixMultiplication/gpu/: matMulBlas.cu  matrixMul.cu
matrixMultiplication/matrix/: Matrix.cpp  Matrix.hpp  MatrixMul.cpp  MatrixMul.hpp  MatrixMulEigen.cpp  MatrixMulEigen.hpp  MatrixMulFunctions.cpp  MatrixMulFunctions.hpp  MatrixMulGpt.cpp  MatrixMulGpt.hpp  MatrixMulOpenBlas.cpp  MatrixMulOpenBlas.hpp  claudeMatMul.cpp  cmatrix.h  kernels.cpp  kernels.hpp  matMul.cpp  matMulAutotune.cpp  matMulAutotune.hpp  matMulBlis.cpp  matMulBlis.hpp  matMulClaude.cpp  matMulClaude.hpp  matMulColOpt.cpp  matMulColOpt.hpp  matMulEigen.cpp  matMulGpt.cpp  matMulLoops.cpp  matMulLoops.hpp  matMulOpenBlas.cpp  matMulPadding.cpp  matMulPadding.hpp  matMulRegOpt.cpp  matMulRegOpt.hpp  matMulSimd.cpp  matMulSimd.hpp  reorderMatrix.hpp
matrixMultiplication/utils/: utils.cpp  utils.hpp
rust/: Cargo.toml  bench.sh
rust/benches/: avx512_kernel_benchmark.rs  mm_benchmark.rs
rust/examples/: show_avx512_asm.rs
rust/src/: lib.rs  main.rs  matmul.rs  wide_kernel.rs  zen5_avx512_kernel.rs
scripts/: autotune-constants.py  perf_record.sh  run_benchmark.sh  run_bf16_benchmark.sh  run_float_benchmark.sh  run_unit_tests.sh  vtune-record.sh
src/: MulMatrixApp.cpp
src/benchmarks/: benchmark_utils.cpp  benchmark_utils.hpp  kernelsBenchmarks.cpp  matMulAutotuneBenchmarks.cpp  matMulBenchmarks.cpp  matMulBf16Benchmarks.cpp  matMulFloatBenchmarks.cpp  matMulZen5Benchmark.cpp
src/benchmarks/cache/: cache.cpp
src/benchmarks/reorder/: reorderBenchmark.cpp
src/benchmarks/stride/: benchEffectiveColStride.cpp
src/gpu/: build.sh
src/mm/core/: Matrix.cpp  Matrix.hpp  bf16kernel.hpp  ikernels.hpp  kernels.cpp  kernels.hpp  layout.hpp  reorderMatrix.hpp  zen5kernels.hpp
src/mm/core/utils/: algorithms.hpp  utils.cpp  utils.hpp
src/mm/genai/: matMulClaude.cpp  matMulClaude.hpp  matMulGpt.hpp
src/mm/matmul/: cmatrix.c  haswell_constants.hpp  matMul.cpp  matMul.hpp  matMulAutotune.cpp  matMulColOpt.cpp  matMulColOpt.hpp  matMulLoops.cpp  matMulLoops.hpp  matMulPadding.cpp  matMulPadding.hpp  matMulRegOpt.cpp  matMulSimd.cpp  matMulSimd.hpp  matMulZen5.cpp  matMulZen5.hpp
src/mm/tpi/: matMulBlis.cpp  matMulEigen.cpp  matMulEigen.hpp  matMulKokkos.cpp  matMulKokkos.hpp  matMulOpenBlas.cpp  matMulOpenBlas.hpp
src/reorder/: reorderBenchmark.cpp
src/stride/: benchEffectiveColStride.cpp
src/tests/: TestKernels.cpp  TestMatMul.cpp  TestRepacking.cpp
src/unitTests/: UTAutotune.cpp  UTKernels.cpp  UTMatMul.cpp  UTMatMulBFP16.cpp  UTMatmulZen5.cpp  UTZorder.cpp
