[package]
name = "matrix_mul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
opt-level = 3
lto = false
debug = false
rpath = false

[dependencies]
rayon = "1.5"
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mm_benchmark"
harness = false