[package]
name = "matrix_mul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
opt-level = 3
lto = false
debug = false
rpath = false
panic = "abort"


[dependencies]
rayon = "1.5"
libc = "0.2"
crossbeam = "0.8.4"
wide = "0.8.0"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mm_benchmark"
harness = false

#[[bench]]
#name = "avx512_kernel_benchmark"
#harness = false